Enable gzip and brotli by default

--- a/nginx.conf
+++ b/nginx.conf
@@ -25,7 +25,10 @@ http {
 
     keepalive_timeout  65;
 
-    #gzip  on;
+    gzip  on;
+
+    brotli on;
+    brotli_static on;
 
     include /etc/nginx/conf.d/*.conf;
 }
